@@ -6,9 +6,10 @@ Development issues: (let me know if you can fix this)
 
 Version 0.5.5.10
 =====================================================================
+- QuickPost now checks for errors after posting the message
 - Update GameFOX site settings for use with new GameFAQs settings
   page
-- Update quick whois for new profiles
+- Update QuickWhois for new profiles
 
 Version 0.5.5.9                                             2008-06-22
 ======================================================================
